Fixed icon alignment

--- a/scss/timed-dialog.scss
+++ b/scss/timed-dialog.scss
@@ -1,5 +1,5 @@
 /**
- * jQuery Timed Dialog Plugin stylesheet
+ * jQuery Timed Dialog Plugin style sheet
  * Author: Armino Popp, <devel@boioiong.com>
  */
 
@@ -39,7 +39,6 @@ button {
 
         background-color: $header-bg-color;
         color: white;
-        line-height: 1.2rem;
         padding: 5px 10px;
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
